@@ -27,13 +27,13 @@ impl ProxySocks5sEscaper {
         let bind_ip = match peer_ip {
             IpAddr::V4(_) => {
                 if self.config.no_ipv4 {
-                    return Err(TcpConnectError::ForbiddenAddressFamily);
+                    return Err(TcpConnectError::ForbiddenAddressFamily(peer_ip));
                 }
                 self.config.bind_v4.map(IpAddr::V4)
             }
             IpAddr::V6(_) => {
                 if self.config.no_ipv6 {
-                    return Err(TcpConnectError::ForbiddenAddressFamily);
+                    return Err(TcpConnectError::ForbiddenAddressFamily(peer_ip));
                 }
                 self.config.bind_v6.map(IpAddr::V6)
             }
